--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -1,2 +1,3 @@
-- include:
-    file: db/changelog/changes/create-tables-and-data.yml
+databaseChangeLog:
+  - include:
+      file: db/changelog/changes/create-tables-and-data.yml
