--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,22 @@
+version: '3.8'
+
 services:
+  app:
+    build: .
+    depends_on:
+      - postgres
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/mydatabase
+      - SPRING_DATASOURCE_USERNAME=myuser
+      - SPRING_DATASOURCE_PASSWORD=secret
+    ports:
+      - '8080:8080'
+  
   postgres:
     image: 'postgres:16'
     environment:
       - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_URL=jdbc:postgresql://auth-postgres-1:5432/'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=myuser'
     ports:
-      - '5432'
+      - '5432:5432'
