--- a/compose.yml
+++ b/compose.yml
@@ -1,16 +1,18 @@
-version: '3.8'
-
 services:
   app:
     build: .
     depends_on:
       - postgres
+      - kafka
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/mydatabase
       - SPRING_DATASOURCE_USERNAME=myuser
       - SPRING_DATASOURCE_PASSWORD=secret
     ports:
       - '8080:8080'
+    networks:
+      - my_shared_network
+
   
   postgres:
     image: 'postgres:16'
@@ -20,6 +22,8 @@ services:
       - 'POSTGRES_USER=myuser'
     ports:
       - '5432:5432'
+    networks:
+      - my_shared_network
 
   kafka:
     image: bitnami/kafka:latest
@@ -32,12 +36,17 @@ services:
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - ALLOW_PLAINTEXT_LISTENER=yes
     volumes:
       - kafka_data:/bitnami/kafka
+    networks:
+      - my_shared_network
 
 volumes:
   kafka_data:
+networks:
+  my_shared_network:
+    name: my_shared_network
