--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.logging.level.liquibase=DEBUG
 spring.jpa.logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
